# PFE

./: .dockerignore  .gitignore  ARCHITECTURE_SEQUENCE_DIAGRAM.md  PC_MIGRATION_AND_SETUP_GUIDE.md  README.md  THE FINAL CONTRACT.sol  THE FINAL CONTRACT.sol.txt  analyze_labels.py  check_50_products_real_ai.py  deberta_metrics.txt  docker-compose.yml  feature_importance.py  generate_50_products_json.py  generate_confusion_matrix.py  install_pyg.py  main.py  pyproject.toml  query_live_alastria_history.py  requirements.txt  sample_amazon_signed_reviews.json  temp_nb_code.txt  tmp_rating_dist.py
Deployment/: Dockerfile.ai_engine  Dockerfile.orchestrator  ReputationLedger.sol  docker-compose.yml  sample_amazon_signed_reviews.json  sample_test_batch.json  server.py  start_all.bat  stop_all.bat
HGT_Heterogeneous_Graph_Model/: build_graph.py  export_predictions_csv.py  hgt_model_metrics.json  model.py  train.py
HGT_Model/: HGT_MODEL_WALKTHROUGH.md  export_predictions_csv.py  hgt_model_metrics.json  train.py  train_transductive_vs_inductive_exp.py
SpamVis_DeBERTa-v3-base_Model/: BERT Training Notebook.ipynb  DeBERTa V3  Training Notebook.ipynb  DeBERTa V3 Training Notebook.ipynb  RoBERTa Training Notebook.ipynb  THE_final_deberta_results.ipynb  best_threshold.json  config.json  evaluate_test_metrics.py  run_deberta_csv_inference.py  tokenizer_config.json
baseline_experiment/: behavior_centric_classification_metrics.json  evaluate_linear_blending_ensemble.py  linear_blending_ensemble_metrics.json  text_centric_classification_metrics.json  train_behavior_centric_model.py  (+1 more)
(+86 files in other folders)
